--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-core-2.3.32.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-core-2.3.32.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
